add JWT autorization middleware
